[package]
name = "signer"
version = "0.1.0"
authors = ["Joseph Spadavecchia <joseph@redtrie.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
oracle = { path = "./proof-systems/oracle" }
algebra = { path = "./proof-systems/zexe/algebra", features = [ "pasta" ] }
mina-curves = { path = "./proof-systems/curves" }
commitment_dlog = { path = "./proof-systems/dlog/commitment" }
rand_core = { version = "0.5" }
array-init = { version = "0.1.1" }
blake2 = { version = "0.9.1" }
hex = { version = "0.4" }
bitvec = { version = "0.22.3" }
sha2 = { version = "0.9.6" }
bs58 = { version = "0.4.0" }